@@ -1,3 +1,6 @@
+(2015-02-24)
+* UPS rate req returns 'negotiated_rate's
+
 (2015-01-13)
 * fill reference field on DHL labels
 
